# 8mbapp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: AppInfo.cmake
cmake/resources/: 8mbapp.rc.in  Globals.hxx.in  setup.iss.in
resources/: 8mbapp-icon.psd  icons.qrc  images.qrc
src/: main.cpp
src/lib/: AccentColor.cxx  AccentColor.hxx  RemoteManager.cxx  RemoteManager.hxx  Settings.cxx  Settings.hxx  SettingsKeys.hxx
src/widgets/: LinkLabel.cxx  LinkLabel.hxx  MainWindow.cxx  MainWindow.hxx  QueueArea.cxx  QueueArea.hxx  QueueItem.cxx  QueueItem.hxx  QueuePlaceholder.cxx  QueuePlaceholder.hxx  SettingsWindow.cxx  SettingsWindow.hxx
src/widgets/tabs/: AboutTab.cxx  AboutTab.hxx  SettingsTab.cxx  SettingsTab.hxx
